--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,21 @@ set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Wconversion -
 include_directories("include")
 
 
-file(GLOB lib_headers  "include/soop/*.hpp")
-file(GLOB lib_code     "lib/*.cpp")
-file(GLOB demo_headers "demo/src/*.hpp")
-file(GLOB demo_code    "demo/src/*.cpp")
-file(GLOB test_code    "test/*.cpp")
+file(GLOB lib_headers   "include/soop/*.hpp")
+file(GLOB lib_code      "lib/*.cpp")
+file(GLOB demo_headers  "demo/src/*.hpp")
+file(GLOB demo_code     "demo/src/*.cpp")
+file(GLOB demo2_headers "demo2/src/*.hpp")
+file(GLOB demo2_code    "demo2/src/*.cpp")
+file(GLOB test_code     "test/*.cpp")
 
 add_library(soop ${lib_headers} ${lib_code})
 
 add_executable(soop_demo ${demo_code} ${demo_headers})
 target_link_libraries(soop_demo soop)
+
+add_executable(soop_demo2 ${demo2_code} ${demo2_headers})
+target_link_libraries(soop_demo2 soop)
 
 add_executable(soop_test ${test_code})
 target_link_libraries(soop_test soop)
