--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ file(GLOB demo_headers  "demo/src/*.hpp")
 file(GLOB demo_code     "demo/src/*.cpp")
 file(GLOB demo2_headers "demo2/src/*.hpp")
 file(GLOB demo2_code    "demo2/src/*.cpp")
+file(GLOB demo3_headers "demo3/src/*.hpp")
+file(GLOB demo3_code    "demo3/src/*.cpp")
 file(GLOB test_code     "test/*.cpp")
 
 add_library(soop ${lib_headers} ${lib_code})
@@ -23,6 +25,9 @@ target_link_libraries(soop_demo soop)
 
 add_executable(soop_demo2 ${demo2_code} ${demo2_headers})
 target_link_libraries(soop_demo2 soop)
+
+add_executable(soop_demo3 ${demo3_code} ${demo3_headers})
+target_link_libraries(soop_demo3 soop)
 
 add_executable(soop_test ${test_code})
 target_link_libraries(soop_test soop)
